[package]
name = "tlspuffin"
description = "TLS protocol implementation for fuzzing with tlspuffin"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["sancov", "introspection"]

cputs = ["tls-harness"]

openssl111 = ["openssl111k"]

openssl111k = [
    "openssl-src",
    "openssl-src/openssl111k",
    "openssl-src/no-rand",
    "tls12",
    "tls13",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "deterministic",
    "claims",
    "openssl111-binding",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
]
openssl111j = [
    "openssl-src",
    "openssl-src/openssl111j",
    "openssl-src/no-rand",
    "tls12",
    "tls13",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "deterministic",
    "claims",
    "openssl111-binding",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
]
openssl111u = [
    "openssl-src",
    "openssl-src/openssl111u",
    "openssl-src/no-rand",
    "tls12",
    "tls13",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "deterministic",
    "claims",
    "openssl111-binding",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
]
openssl312 = [
    "openssl-src",
    "openssl-src/openssl312",
    "openssl-src/no-rand",
    "tls12",
    "tls13",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "deterministic",
    "claims",
    "openssl111-binding",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
]
openssl101f = [
    "openssl-src",
    "openssl-src/openssl101f",
    "openssl-src/weak-crypto",  # We want to allow weak-crypto for FREAK
    "openssl-src/no-rand",
    "openssl101-binding",
    "tls12",
    "tls12-session-resumption",
    "deterministic",
]
openssl102u = [
    "openssl-src",
    "openssl-src/openssl102u",
    "openssl-src/weak-crypto",  # We want to allow weak-crypto for FREAK
    "openssl-src/no-rand",
    "openssl102-binding",
    "tls12",
    "tls12-session-resumption",
    "deterministic",
]

# NOTE feature "libressl" is kept only for backward compatibility
libressl = ["libressl333"]

libressl333 = [
    "openssl-src",
    "openssl-src/libressl333",
    "openssl-src/no-rand",
    "openssl-binding",
    "tls12",
    "tls13",
    "tls12-session-resumption",
    "claims",
    "transcript-extraction",
    "deterministic",
]

wolfssl430 = [
    "wolfssl-sys/wolfssl430",
    "wolfssl/wolfssl430",
    "tls12",
    "tls13",
    "wolfssl-binding",
    "transcript-extraction",
    # Does not support any kind of resumption right now: https://github.com/trailofbits/tlspuffin/issues/12
    # FIXME: support "claims", "deterministic"
]

wolfssl510 = [
    "wolfssl-sys/wolfssl510",
    "tls12",
    "tls13",
    "wolfssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
    # FIXME: support "claims", "deterministic"
]

wolfssl520 = [
    "wolfssl-sys/wolfssl520",
    "tls12",
    "tls13",
    "wolfssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
    # FIXME: support "claims", "deterministic"
]

wolfssl530 = [
    "wolfssl-sys/wolfssl530",
    "tls12",
    "tls13",
    "wolfssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
    # FIXME: support "claims", "deterministic"
]

wolfssl540 = [
    "wolfssl-sys/wolfssl540",
    "tls12",
    "tls13",
    "wolfssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
    # FIXME: support "claims", "deterministic"
]

fix-CVE-2022-25638 = ["wolfssl-sys?/fix-CVE-2022-25638"]
fix-CVE-2022-25640 = ["wolfssl-sys?/fix-CVE-2022-25640"]
fix-CVE-2022-39173 = ["wolfssl-sys?/fix-CVE-2022-39173"]
fix-CVE-2022-42905 = ["wolfssl-sys?/fix-CVE-2022-42905"]
wolfssl-disable-postauth = ["wolfssl-sys?/wolfssl-disable-postauth"]

wolfsslmaster = [
    "wolfssl-sys/master",
    "tls12",
    "tls13",
    "wolfssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
    # FIXME: support "claims", "deterministic"
]


boringsslmaster = [
    "boringssl-sys/boringsslmaster",
    "tls12",
    "tls13",
    "boringssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "client-authentication-transcript-extraction",
    "deterministic",
    "claims",
]

boringssl202311 = [
    "boringssl-sys/boringssl202311",
    "tls12",
    "tls13",
    "boringssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "claims",
    "client-authentication-transcript-extraction",
    "deterministic",
]

boringssl202403 = [
    "boringssl-sys/boringssl202403",
    "tls12",
    "tls13",
    "boringssl-binding",
    "tls12-session-resumption",
    "tls13-session-resumption",
    "transcript-extraction",
    "claims",
    "client-authentication-transcript-extraction",
    "deterministic",
]

# Logs each execution of __sanitizer_cov_trace_pc_guard*
sancov_pcguard_log = ["puffin/sancov_pcguard_log"]
# Uses libafl for the instrumentation. sancov_pcguard_log and sancov are mutally exclusive
sancov = [
    "puffin/sancov",
    "openssl-src?/sancov",
    "wolfssl-sys?/sancov",
    "boringssl-sys?/sancov",
]

# Enables ASAN
asan = ["openssl-src?/asan", "wolfssl-sys?/asan", "boringssl-sys?/asan"]
gcov = ["openssl-src?/gcov", "wolfssl-sys?/gcov", "boringssl-sys?/gcov"]
llvm_cov = [
    "openssl-src?/llvm_cov",
    "wolfssl-sys?/llvm_cov",
    "boringssl-sys?/llvm_cov",
]

# WolfSSL bindings are used
wolfssl-binding = ["wolfssl", "wolfssl-sys", "foreign-types"]
# OpenSSL bindings are used
openssl-binding = ["openssl", "openssl-sys", "foreign-types-openssl"]
# Openssl 1.0.1 bindings
openssl101-binding = ["openssl-binding"]
# Openssl 1.0.2 bindings
openssl102-binding = ["openssl-binding"]
# Openssl 1.1.1 bindings
openssl111-binding = ["openssl-binding"]

boringssl-binding = ["boring", "boringssl-sys", "foreign-types"]

# PUT supports TLS 1.3
tls13 = []
# PUT supports TLS 1.2
tls12 = []
# PUT supports session resumption through Tickets and PSK
tls13-session-resumption = []
# PUT supports session resumption through RFC5077
tls12-session-resumption = []
# PUT is determinisitic
deterministic = ["boringssl-sys?/no-rand"]
# Require the PUT to implement the claim-interface.h
claims = []
# Whether transcript extraction is supported. This is needed for simplified traces.
transcript-extraction = []
# PUT exposes the required transcripts which are required for client authentication
client-authentication-transcript-extraction = []

introspection = ["puffin/introspection"]

# Enable rustls guards rejecting ill-formed messages, those were disabled by default to allow the fuzzer to explore more messages
enable-guards = []

# utility functions for testing tlspuffin
test-utils = ["tempfile"]

[dependencies]

puffin = { path = "../puffin" }

log = { workspace = true }
#features = ["release_max_level_off", "max_level_warn"]
itertools = { workspace = true }
libc = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
cfg-if = { workspace = true }
smallvec = { workspace = true }

ring = { version = "0.16.20", features = ["std"] }
webpki = { version = "0.22.0", features = ["alloc", "std"] }
sct = "0.7.0"

# OpenSSL

# Up to version 111
openssl = { version = "0.10.41", features = ["vendored"], optional = true }
openssl-sys = { version = "*", features = ["vendored"], optional = true }

foreign-types-openssl = { version = "0.3.1", package = "foreign-types", optional = true }
security-claims = { path = "../tlspuffin-claims", version = "0.1.0", optional = false }


# WolfSSL
wolfssl = { path = "../crates/wolfssl", optional = true }
wolfssl-sys = { path = "../crates/wolfssl-sys", features = [], optional = true }
boring = { path = "../crates/boring", optional = true }
boringssl-sys = { path = "../crates/boringssl-sys", features = [
], optional = true }
tls-harness = { path = "../puts/harness", package = "tlspuffin-harness-sys", features = [
    "tls",
], optional = true }
foreign-types = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[build-dependencies]
# It is essential that this dependency is listed as build-dependencies! Because it is one. Else features get resolved wrong.
openssl-src = { version = "*", features = [], optional = true }
puffin-build = { path = "../puffin-build" }

[dev-dependencies]
test-log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

# NOTE force `test-utils` feature in tests/benchmarks/examples
tlspuffin = { path = ".", default-features = false, features = ["test-utils"] }

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "tlspuffin"
path = "src/main.rs"
