[package]
name = "boringssl-sys"
version = "0.1.0"
edition = "2021"
links = "boring"

[dependencies]
libc = "0.2"

[build-dependencies]
boringssl-src = { path = "../boringssl-src" }
bindgen = "0.69.1"

[features]
vendored-master = []
boring-2023-11-18 = []
boring-2024-03-22 = []

sancov = []
asan = []
deterministic = []

gcov_analysis = []
llvm_cov_analysis = []
