[package]
name = "boringssl-sys"
version = "0.1.0"
edition = "2021"
links = "boring"

[dependencies]
libc = "0.2"

[build-dependencies]
boringssl-src = { path = "../boringssl-src" }
bindgen = "0.69.1"

[features]
boringsslmaster = []
boringssl202311 = []
boringssl202403 = []

sancov = []
asan = []
deterministic = []

gcov = []
llvm_cov = []
