[package]
name = "libressl-src"
version = "111.0.0"
authors = ["Dubiousjim <dubiousjim@gmail.com>", "Max Ammann <max@maxammann.org>"]
license = "MIT/Apache-2.0"
description = "Source of LibreSSL and logic to build it."
repository = "https://github.com/dubiousjim/libressl-src"
readme = "README.md"
exclude = ['libressl/*']

[features]
default = [ ]
sancov = []
asan = [] # TODO
gcov_analysis = [] # TODO
llvm_cov_analysis = [] # TODO

vendored-libressl333 = []
vendored-libresslmaster = []

[dependencies]
security-claims = { path = "../../tlspuffin-claims" }
autotools = "0.2"
