[package]
name = "libressl-src"
version = "111.0.0"
edition = "2021"
authors = [
    "Dubiousjim <dubiousjim@gmail.com>",
    "Max Ammann <max@maxammann.org>",
]
license = "MIT/Apache-2.0"
description = "Source of LibreSSL and logic to build it."
repository = "https://github.com/dubiousjim/libressl-src"
readme = "README.md"
exclude = ['libressl/*']

[features]
default = []
sancov = []
asan = []     # TODO
gcov = []     # TODO
llvm_cov = [] # TODO
no-rand = []

libressl333 = []
libresslmaster = []

[dependencies]
security-claims = { path = "../../tlspuffin-claims" }
puffin-build = { path = "../../puffin-build" }
