[package]
name = "wolfssl-sys"
version = "0.1.7"
edition = "2021"
authors = []
links = "wolfssl"

[build-dependencies]
wolfssl-src = "0.1.0"

[features]

fix-CVE-2022-25638 = []
fix-CVE-2022-25640 = []
fix-CVE-2022-39173 = []
fix-CVE-2022-42905 = []
wolfssl-disable-postauth = []

vendored-wolfssl430 = []
vendored-wolfssl510 = []
vendored-wolfssl520 = []
vendored-wolfssl530 = []
vendored-wolfssl540 = []
vendored-wolfssl563 = []
vendored-master = []

sancov = []
asan = []

gcov_analysis = []
llvm_cov_analysis = []
