[package]
name = "wolfssl-sys"
version = "0.1.7"
edition = "2021"
authors = []
links = "wolfssl"

[dependencies]
log = "0.4"
libc = "0.2"

[build-dependencies]
wolfssl-src = { path = "../wolfssl-src" }
bindgen = "0.69.1"

[features]

fix-CVE-2022-25638 = []
fix-CVE-2022-25640 = []
fix-CVE-2022-39173 = []
fix-CVE-2022-42905 = []
wolfssl-disable-postauth = []

wolfssl430 = []
wolfssl510 = []
wolfssl520 = []
wolfssl530 = []
wolfssl540 = []
master = []

sancov = []
asan = []

gcov = []
llvm_cov = []
