[package]
name = "tlspuffin-harness-sys"
description = "Harness code for interfacing a PUT with tlspuffin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
tls = []

cputs = []

asan = []
sancov = []
gcov = []
llvm_cov = []

openssl111k = []
openssl111j = []
openssl111u = []
openssl312 = []
openssl101f = []
openssl102u = []
libressl333 = []
wolfssl430 = []
wolfssl510 = []
wolfssl520 = []
wolfssl530 = []
wolfssl540 = []
boringssl202311 = []
boringssl202403 = []

wolfssl_fix_CVE_2022_25638 = []
wolfssl_fix_CVE_2022_25640 = []
wolfssl_fix_CVE_2022_39173 = []
wolfssl_fix_CVE_2022_42905 = []
wolfssl_disable_postauth = []

[dependencies]
libc = { version = "0.2.126" }
puffin = { path = "../../puffin" }
log = "0.4.17"
once_cell = "1.19.0"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = "0.69.1"
