[package]
name = "tlspuffin-harness-sys"
description = "Harness code for interfacing a PUT with tlspuffin"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
tls = []

[dependencies]
puffin = { path = "../../puffin" }
log = { workspace = true }
libc = { workspace = true }

[build-dependencies]
cmake = { workspace = true }
cc = { workspace = true }
bindgen = { workspace = true }
